# Turtle-

backend/: Cargo.toml
backend/crates/database/: Cargo.toml
backend/crates/database/src/: basic.rs  basic_db.rs
backend/crates/net/: Cargo.toml
backend/crates/net/src/: lib.rs  profile.rs  router.rs  server.rs
backend/crates/net/src/handler/: mod.rs
backend/crates/service/src/parser/: profile.rs
frontend/: .gitignore  Devdocs.md  Fetch.md  README.md  Walletinteraction.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/components/: AppHeader.tsx  Button.tsx  CommunityCard.tsx  ContentSubmitComponent.tsx  CountdownTimer.tsx  CreateCommunityModal.tsx  MockWalletContext.tsx  PostDetailModal.tsx  ProfileButton.tsx  ProfileSetupModal.tsx  SearchBar.tsx  VotingProposalComponent.tsx  WalletButton.tsx  WalletContextProvider.tsx
frontend/src/components/PingButton/: index.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useSimpleTurtleProgram.ts  useTurtleProgram.ts  useWalletNetwork.ts
frontend/src/services/: api.ts
frontend/src/utils/: borsh.ts  constants.ts  models.ts  program.ts  simple-program.ts  solana-program.ts  test-transaction.ts
solana_program/: .gitignore  Cargo.toml  README.md
solana_program/src/: error.rs  instruction.rs  lib.rs  mod.rs  test.rs
x/: a.js  b.js  c.js  c.py  error.md  my-solana-wa.json  my-solana-wal.json  my-solana-wall.json  my-solana-walle.json  my-solana-wallet.json  package-lock.json  package.json
(+1 files in other folders)
