[package]
name = "turtle-dao"
version = "0.1.0"
edition = "2021"
description = "Turtle DAO - Incentive-driven community platform on the Solana blockchain"

[dependencies]
solana-program = "1.16.0"
borsh = "0.10.3"
thiserror = "1.0.40"
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "2.0.0", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]