[package]
name = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true 
tokio.workspace =  true
tower = "0.5.2"
turtle-database.workspace = true
turtle-service.workspace = true
serde_json = "1.0.140"
base64 = "0.22.1"
bytes = "1.10.0"
http-body-util = "0.1.2"
mime = "0.3.17"
tempfile = "3.17.1"